# sealrs

./: .env  Cargo.toml  README.md  changelog.md  dplan.md
src/: lib.rs  seal_future.rs
src/actors/: abstract_actor_ref.rs  abstract_actor_system.rs  actor.rs  actor_cell.rs  actor_context.rs  actor_path.rs  actor_ref_factory.rs  ask_actor.rs  dead_letters.rs  default_dispatcher.rs  dispatcher.rs  envelope.rs  error.rs  fsm.rs  local_actor_ref.rs  local_actor_system.rs  mailbox.rs  message.rs  mod.rs  pinned_dispatcher.rs  prelude.rs  props.rs  scheduler.rs  stash.rs  supervision.rs  synthetic_actor.rs  timers.rs  unbound_mailbox.rs  watcher.rs  wrapped_dispatcher.rs
src/actors/remoting/: acceptor.rs  connection.rs  delivery_error.rs  id_counter.rs  larid.rs  messages_serializer.rs  mod.rs  net_controller.rs  network_actor_system.rs  packet.rs  remote_actor_ref.rs  remote_actor_system.rs
src/common/: mod.rs  tsafe.rs
src/examples/: mod.rs
src/examples/actors/: mod.rs
src/examples/actors/ask/: example.rs  first.rs  mod.rs  second.rs
src/examples/actors/basic/: basic_actor.rs  example.rs  mod.rs
src/examples/actors/custom_dispatcher/: example.rs  mod.rs  my_dispatcher.rs
src/examples/executors/: example.rs
src/examples/futures/: example.rs
src/examples/testkit/: bagsman.rs  mod.rs
src/executors/: executor.rs  mod.rs  thread_pinned_executor.rs
src/futures/: async_promise.rs  completable_promise.rs  future.rs  mod.rs  promise.rs
src/testkit/: macrodef.rs  mod.rs
src/testkit/actors/: macrodef.rs  mod.rs  prelude.rs  test_local_actor_ref.rs  test_local_actor_system.rs  test_probe.rs
(+39 files in other folders)
