[package]
name = "sealrs"
version = "0.13.2"
authors = ["Oleg Vyalkin <ovvyalkin@gmail.com>"]
edition = "2018"
description = "Set of classic asynchronous primitives (Actors, Executors, Futures / Promises)"
repository = "https://github.com/Serbis/sealrs"
readme = "README.md"
keywords = ["actor", "future", "promise", "async", "thread"]
categories = ["asynchronous", "concurrency", "development-tools"]
license = "MIT"

[dependencies]
match-downcast = "0.1.2"
num_cpus = "1.10.0"
timer = "0.2.0"
chrono = "0.4"
rand = "0.6.5"
failure = "0.1.5"
log = "0.4.0"
bytes = "0.4.12"
arraydeque = "0.4.5"

#pretty_env_logger = "0.3.0"
#dotenv = "0.14.1"
#futures = "0.1.27"
#jsonrpc-http-server = "12.0.0"
#serde_json = "1.0"
#serde = { version = "1.0.94", features = ["derive"] }


[dev-dependencies]



[badges]
maintenance = { status = "passively-maintained" }